# T-1000

./: .env.example  .gitignore  LICENCE  MAC_CPU.yml  README.md  TODO.md  UBUNTU_CPU.yml  WINDOWS_CPU.yml  actor.py  base_df.py  base_df_n_correlation.py  coingekko.py  combined_df.py  core_env.py  core_main.py  core_render.py  correlation_heatmap.py  cryptocompare_api.py  custon_env.py  enviroment.yml  environment.yml  environmente_to_custon-env.yml  envs.py  evaluate.py  forecast.py  functions.py  get_datasets.py  harisson.py  heat.py  historical.py  hypeindx.py  instance.py  lin.py  linux_env.yml  log.py  main.py  markovitz.backup.py  markovitz.py  plot_portfolio.py  predict.py  (+24 more)
.github/: FUNDING.yml
app/: package-lock.json  package.json  vue.config.js
backups/: hypeindx.py
config/: charts.py  functions.py  historical.py  vars.py
configs/: agent.py  charts.py  functions.py  get_datasets.py  historical.py  ppo_default.yaml  vars.py
core/: apagar.py  branch_next.py  train.py  train_multi_model.py
data/: README.md
datasets/: 24-8_ethereum-classic_d90_btc.csv  CONTENT.md  LTC_1d_2018-11-01_2019-03-18.csv  PPO_TradingEnv_0_lr=1e-07_2019-04-04_17-49-44b2b2wa28-tag-ray_tune_episode_reward_max.csv
docs/: CONTEND.MD  HOW_IT_WORKS.md  correlation_kendall_2019-04-16.html  correlation_pearson_2019-04-16.html  correlation_spearman_2019-04-12.html  correlation_spearman_2019-04-16.html  dashboard_LTC_prophet.html  dashboard_ltc_hype.html  dashboard_ltc_momentum.html  efficient_frontier.html  efficient_frontier_2019-04-16.html  index.html  kendall_correlation.html  (+18 more)
(+138 files in other folders)
