[project]
name = "t-1000"
version = "0.1.0"
description = "DRL agent for optimizing Uniswap V3 concentrated liquidity positions"
requires-python = ">=3.11"
dependencies = [
    "db-dtypes>=1.7.0",
    "eth-abi>=5.2.0",
    "eth-utils>=6.0.0",
    "google-cloud-bigquery>=3.42.1",
    "gymnasium>=1.3.0",
    "hexbytes>=1.3.1",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pycryptodome>=3.23.0",
    "pyyaml>=6.0.3",
    "stable-baselines3[extra]>=2.9.0",
    "torch>=2.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/t1000"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
